-- สร้างฐานข้อมูล
CREATE DATABASE IF NOT EXISTS hello_pet_shop CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
USE hello_pet_shop;

-- 1. roles
CREATE TABLE roles (
    id INT AUTO_INCREMENT PRIMARY KEY,
    role_name VARCHAR(50) NOT NULL UNIQUE
);

-- 2. users
CREATE TABLE users (
    id INT AUTO_INCREMENT PRIMARY KEY,
    role_id INT NOT NULL,
    username VARCHAR(50) NOT NULL UNIQUE,
    password_hash VARCHAR(255) NOT NULL,
    email VARCHAR(100) NOT NULL UNIQUE,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    FOREIGN KEY (role_id) REFERENCES roles(id) ON DELETE RESTRICT
);

-- 3. customers
CREATE TABLE customers (
    id INT AUTO_INCREMENT PRIMARY KEY,
    user_id INT NOT NULL UNIQUE,
    first_name VARCHAR(100) NOT NULL,
    last_name VARCHAR(100) NOT NULL,
    phone VARCHAR(20) NOT NULL,
    reward_points INT DEFAULT 0,
    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE
);

-- 4. employees
CREATE TABLE employees (
    id INT AUTO_INCREMENT PRIMARY KEY,
    user_id INT NOT NULL UNIQUE,
    first_name VARCHAR(100) NOT NULL,
    last_name VARCHAR(100) NOT NULL,
    position VARCHAR(100),
    salary DECIMAL(10, 2),
    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE
);

-- 5. pets
CREATE TABLE pets (
    pet_id INT AUTO_INCREMENT PRIMARY KEY,
    customer_id INT NOT NULL,
    pet_name VARCHAR(100) NOT NULL,
    pet_type VARCHAR(50) NOT NULL,
    breed VARCHAR(100),
    birthdate DATE,
    weight DECIMAL(10,2),
    allergy_info TEXT NULL,
    notes TEXT NULL,
    image_url VARCHAR(255) NULL,
    FOREIGN KEY (customer_id) REFERENCES customers(id) ON DELETE CASCADE
);

-- 6. addresses
CREATE TABLE addresses (
    id INT AUTO_INCREMENT PRIMARY KEY,
    customer_id INT NOT NULL,
    address_line1 TEXT NOT NULL,
    address_line2 TEXT,
    city VARCHAR(100) NOT NULL,
    state VARCHAR(100) NOT NULL,
    postal_code VARCHAR(20) NOT NULL,
    is_default BOOLEAN DEFAULT FALSE,
    FOREIGN KEY (customer_id) REFERENCES customers(id) ON DELETE CASCADE
);

-- 7. product_categories
CREATE TABLE product_categories (
    id INT AUTO_INCREMENT PRIMARY KEY,
    name VARCHAR(100) NOT NULL,
    description TEXT,
    requires_expiration TINYINT(1) NOT NULL DEFAULT 1
);

-- 7a. pet_types
CREATE TABLE pet_types (
    id INT AUTO_INCREMENT PRIMARY KEY,
    name VARCHAR(100) NOT NULL,
    code VARCHAR(50) NOT NULL UNIQUE,
    description VARCHAR(255) NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- 8. products
CREATE TABLE products (
    id INT AUTO_INCREMENT PRIMARY KEY,
    category_id INT NOT NULL,
    target_pet_type_id INT NULL DEFAULT 1,
    name VARCHAR(255) NOT NULL,
    description TEXT,
    cost_price DECIMAL(10, 2) NOT NULL DEFAULT 0,
    price DECIMAL(10, 2) NOT NULL,
    stock_quantity INT NOT NULL DEFAULT 0,
    barcode VARCHAR(100) UNIQUE,
    image_url VARCHAR(255),
    status ENUM('active', 'inactive') DEFAULT 'active',
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    FOREIGN KEY (category_id) REFERENCES product_categories(id) ON DELETE RESTRICT,
    FOREIGN KEY (target_pet_type_id) REFERENCES pet_types(id) ON DELETE SET NULL
);

-- 9. carts
CREATE TABLE carts (
    id INT AUTO_INCREMENT PRIMARY KEY,
    customer_id INT NOT NULL UNIQUE,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    FOREIGN KEY (customer_id) REFERENCES customers(id) ON DELETE CASCADE
);

-- 10. cart_items
CREATE TABLE cart_items (
    id INT AUTO_INCREMENT PRIMARY KEY,
    cart_id INT NOT NULL,
    product_id INT NOT NULL,
    quantity INT NOT NULL DEFAULT 1,
    FOREIGN KEY (cart_id) REFERENCES carts(id) ON DELETE CASCADE,
    FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE CASCADE,
    UNIQUE(cart_id, product_id)
);

-- 11. orders
CREATE TABLE orders (
    id INT AUTO_INCREMENT PRIMARY KEY,
    customer_id INT NOT NULL,
    employee_id INT NULL COMMENT 'NULL if online, employee ID if POS',
    address_id INT NOT NULL,
    promo_id INT NULL,
    subtotal DECIMAL(10, 2) NOT NULL,
    discount DECIMAL(10, 2) DEFAULT 0,
    shipping_fee DECIMAL(10, 2) DEFAULT 0,
    net_total DECIMAL(10, 2) NOT NULL,
    status ENUM('pending', 'paid', 'preparing', 'shipped', 'completed', 'cancelled') DEFAULT 'pending',
    payment_method ENUM('transfer', 'cash', 'credit_card') DEFAULT 'transfer',
    order_type ENUM('online', 'pos') DEFAULT 'online',
    free_gift VARCHAR(255) DEFAULT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (customer_id) REFERENCES customers(id) ON DELETE RESTRICT,
    FOREIGN KEY (employee_id) REFERENCES employees(id) ON DELETE SET NULL,
    FOREIGN KEY (address_id) REFERENCES addresses(id) ON DELETE RESTRICT,
    FOREIGN KEY (promo_id) REFERENCES promotions(id) ON DELETE SET NULL
);

-- 12. order_details
CREATE TABLE order_details (
    id INT AUTO_INCREMENT PRIMARY KEY,
    order_id INT NOT NULL,
    product_id INT NOT NULL,
    quantity INT NOT NULL,
    unit_cost DECIMAL(10, 2) NOT NULL,
    unit_price DECIMAL(10, 2) NOT NULL,
    total_price DECIMAL(10, 2) NOT NULL,
    FOREIGN KEY (order_id) REFERENCES orders(id) ON DELETE CASCADE,
    FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE RESTRICT
);

-- 13. payments
CREATE TABLE payments (
    id INT AUTO_INCREMENT PRIMARY KEY,
    order_id INT NOT NULL,
    amount DECIMAL(10, 2) NOT NULL,
    slip_image_url VARCHAR(255),
    status ENUM('pending', 'verified', 'rejected') DEFAULT 'pending',
    payment_date TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    verified_by INT NULL,
    FOREIGN KEY (order_id) REFERENCES orders(id) ON DELETE CASCADE,
    FOREIGN KEY (verified_by) REFERENCES employees(id) ON DELETE SET NULL
);

-- 14. delivery_companies
CREATE TABLE delivery_companies (
    id INT AUTO_INCREMENT PRIMARY KEY,
    name VARCHAR(100) NOT NULL,
    tracking_url_format VARCHAR(255)
);

-- 15. deliveries
CREATE TABLE deliveries (
    id INT AUTO_INCREMENT PRIMARY KEY,
    order_id INT NOT NULL UNIQUE,
    delivery_company_id INT NOT NULL,
    tracking_number VARCHAR(100),
    status ENUM('pending', 'shipped', 'delivered') DEFAULT 'pending',
    shipped_date TIMESTAMP NULL,
    delivered_date TIMESTAMP NULL,
    FOREIGN KEY (order_id) REFERENCES orders(id) ON DELETE CASCADE,
    FOREIGN KEY (delivery_company_id) REFERENCES delivery_companies(id) ON DELETE RESTRICT
);

-- 16. promotions
CREATE TABLE promotions (
    id INT AUTO_INCREMENT PRIMARY KEY,
    code VARCHAR(50) UNIQUE NOT NULL,
    description TEXT,
    discount_type ENUM('percent', 'fixed') NOT NULL,
    discount_value DECIMAL(10, 2) NOT NULL,
    start_date DATE NOT NULL,
    end_date DATE NOT NULL,
    is_active BOOLEAN DEFAULT TRUE
);

-- 17. reward_point_logs
CREATE TABLE reward_point_logs (
    id INT AUTO_INCREMENT PRIMARY KEY,
    customer_id INT NOT NULL,
    points INT NOT NULL,
    type ENUM('earned', 'redeemed') NOT NULL,
    description VARCHAR(255),
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (customer_id) REFERENCES customers(id) ON DELETE CASCADE
);

-- 18. inventory_logs
CREATE TABLE inventory_logs (
    id INT AUTO_INCREMENT PRIMARY KEY,
    product_id INT NOT NULL,
    employee_id INT NULL,
    reference_id INT NULL COMMENT 'Links to order_id or restock_id',
    quantity_change INT NOT NULL,
    type ENUM('sale', 'restock', 'adjust', 'cancel') NOT NULL,
    reason VARCHAR(255),
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (product_id) REFERENCES products(product_id) ON DELETE CASCADE,
    FOREIGN KEY (employee_id) REFERENCES employees(id) ON DELETE SET NULL
);

-- 19. restock_orders
CREATE TABLE restock_orders (
    id INT AUTO_INCREMENT PRIMARY KEY,
    employee_id INT NOT NULL,
    supplier_name VARCHAR(255) NOT NULL,
    total_cost DECIMAL(10, 2) NOT NULL,
    status ENUM('pending', 'received') DEFAULT 'pending',
    order_date TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (employee_id) REFERENCES employees(id) ON DELETE RESTRICT
);

-- 20. restock_details
CREATE TABLE restock_details (
    id INT AUTO_INCREMENT PRIMARY KEY,
    restock_order_id INT NOT NULL,
    product_id INT NOT NULL,
    quantity INT NOT NULL,
    unit_cost DECIMAL(10, 2) NOT NULL,
    lot_number VARCHAR(100) NULL,
    expiry_date DATE NULL,
    FOREIGN KEY (restock_order_id) REFERENCES restock_orders(id) ON DELETE CASCADE,
    FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE RESTRICT
);

-- 20a. product_lots
CREATE TABLE product_lots (
    lot_id INT AUTO_INCREMENT PRIMARY KEY,
    product_id INT NOT NULL,
    lot_number VARCHAR(100) NULL,
    quantity INT NOT NULL DEFAULT 0,
    expiry_date DATE NULL,
    cost_price DECIMAL(10, 2) NOT NULL DEFAULT 0.00,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    FOREIGN KEY (product_id) REFERENCES products(id) ON DELETE CASCADE
);


-- 21. financial_records
CREATE TABLE financial_records (
    id INT AUTO_INCREMENT PRIMARY KEY,
    record_type ENUM('income', 'expense') NOT NULL,
    reference_type ENUM('order', 'restock') NOT NULL,
    amount DECIMAL(10, 2) NOT NULL,
    description VARCHAR(255),
    reference_id INT NOT NULL COMMENT 'Can link to order_id or restock_id',
    record_date TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- 22. news
CREATE TABLE news (
    id INT AUTO_INCREMENT PRIMARY KEY,
    title VARCHAR(255) NOT NULL,
    content TEXT NOT NULL,
    image_url VARCHAR(255),
    author_id INT NOT NULL,
    is_active BOOLEAN DEFAULT TRUE,
    published_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (author_id) REFERENCES employees(id) ON DELETE RESTRICT
);

-- 23. store_settings
CREATE TABLE store_settings (
    id INT AUTO_INCREMENT PRIMARY KEY,
    setting_key VARCHAR(100) UNIQUE NOT NULL,
    setting_value TEXT NOT NULL
);

-- 24. gift_rules
CREATE TABLE gift_rules (
    rule_id INT AUTO_INCREMENT PRIMARY KEY,
    min_spend DECIMAL(10, 2) UNIQUE NOT NULL,
    gift_name VARCHAR(255) NOT NULL,
    gift_qty INT DEFAULT 1,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- ===========================================
-- เพิ่มเติม EXPLICIT INDEXES (สำหรับ Query ที่ถูกใช้บ่อย)
-- ===========================================
CREATE INDEX idx_products_status ON products(status);
CREATE INDEX idx_products_category ON products(category_id);
CREATE INDEX idx_orders_status ON orders(status);
CREATE INDEX idx_orders_type ON orders(order_type);
CREATE INDEX idx_orders_created_at ON orders(created_at);
CREATE INDEX idx_payments_status ON payments(status);
CREATE INDEX idx_inventory_logs_ref ON inventory_logs(reference_id);
CREATE INDEX idx_financial_records_date ON financial_records(record_date);


-- ===========================================
-- SEED DATA
-- ===========================================
INSERT INTO roles (id, role_name) VALUES (1, 'admin'), (2, 'employee'), (3, 'customer');

INSERT INTO users (id, role_id, username, password_hash, email) VALUES 
(1, 1, 'admin', '$2y$10$92IXUNpkjO0rOQ5byMi.Ye4oKoEa3Ro9llC/.og/at2.uheWG/igi', 'admin@hellopetshop.com'),
(2, 2, 'staff1', '$2y$10$92IXUNpkjO0rOQ5byMi.Ye4oKoEa3Ro9llC/.og/at2.uheWG/igi', 'staff1@hellopetshop.com'),
(3, 3, 'john_doe', '$2y$10$92IXUNpkjO0rOQ5byMi.Ye4oKoEa3Ro9llC/.og/at2.uheWG/igi', 'john@example.com');

INSERT INTO employees (user_id, first_name, last_name, position, salary) VALUES
(1, 'Super', 'Admin', 'Manager', 50000.00),
(2, 'Jane', 'Staff', 'Cashier', 15000.00);

INSERT INTO customers (user_id, first_name, last_name, phone, reward_points) VALUES
(3, 'John', 'Doe', '0812345678', 150);

INSERT INTO addresses (customer_id, address_line1, city, state, postal_code, is_default) VALUES
(1, '123 Pet Street', 'Bangkok', 'Bangkok', '10110', 1);

INSERT INTO product_categories (id, name, description) VALUES
(1, 'Dog Food', 'อาหารสุนัข ทุกวัย ทุกสายพันธุ์'),
(2, 'Cat Food', 'อาหารแมว'),
(3, 'Accessories', 'อุปกรณ์สัตว์เลี้ยง ของเล่น ปลอกคอ');

INSERT INTO products (category_id, name, description, cost_price, price, stock_quantity, barcode, status) VALUES
(1, 'Royal Canin Medium Adult 4kg', 'อาหารสุนัขพันธุ์กลาง', 650.00, 850.00, 50, '885000000001', 'active'),
(2, 'Pedigree Pouch Chicken 130g', 'อาหารเปียกสุนัข', 15.00, 25.00, 200, '885000000002', 'active'),
(3, 'สายจูงสุนัข มีไฟ LED', 'สายจูงยาว 2 เมตร มีไฟ', 120.00, 250.00, 30, '885000000003', 'active');

INSERT INTO store_settings (setting_key, setting_value) VALUES
('line_oa', '@hellopetshop'),
('point_earning_rate', '100'),
('point_redeem_rate', '1');
